--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="signatures">#885E41</color>
     <color name="dark_beige">#D6B29A</color>
     <color name="beige3">#BA8865</color>
+    <color name="light_gray">#A3A0A0</color>
 </resources>
