--- a/app/src/main/res/navigation/btn.xml
+++ b/app/src/main/res/navigation/btn.xml
@@ -159,5 +159,9 @@
         android:id="@+id/updateUserFragment"
         android:name="com.example.historyvn_project.UpdateUserFragment"
         android:label="fragment_update_user"
-        tools:layout="@layout/fragment_update_user" />
+        tools:layout="@layout/fragment_update_user" >
+        <action
+            android:id="@+id/action_updateUserFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
+    </fragment>
 </navigation>
