--- a/app/src/main/res/layout/fragment_objects.xml
+++ b/app/src/main/res/layout/fragment_objects.xml
@@ -18,13 +18,38 @@
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewReg"
+        app:queryHint="Поиск.."
+        android:textColor="@color/dark_brown"
+        android:background="@drawable/search_view"
+        app:iconifiedByDefault="false"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/collectionsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
+        android:visibility="visible"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@+id/textViewReg"
+        app:layout_constraintTop_toBottomOf="@+id/searchView"
         tools:listitem="@layout/object_item" />
+
+    <TextView
+        android:id="@+id/textNotFound"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/vollkorn_bold"
+        android:gravity="center"
+        android:paddingVertical="10dp"
+        android:text="Не найдено.."
+        android:visibility="gone"
+        android:textColor="@color/grey_font"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@+id/searchView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
