--- a/app/src/main/res/layout/fragment_tests_list.xml
+++ b/app/src/main/res/layout/fragment_tests_list.xml
@@ -1,18 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".TestsListFragment">
 
+    <TextView
+        android:id="@+id/textViewReg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/vollkorn_bold"
+        android:gravity="center"
+        android:paddingVertical="10dp"
+        android:text="Тесты"
+        android:textColor="@color/dark_brown"
+        android:textSize="24sp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/search_view"
+        android:textColor="@color/dark_brown"
+        app:iconifiedByDefault="false"
+        app:layout_constraintTop_toBottomOf="@+id/textViewReg"
+        app:queryHint="Поиск.." />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/testsRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_margin="10dp"
-        tools:listitem="@layout/test_object_item"
         android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        android:visibility="visible"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@+id/searchView"
+        tools:listitem="@layout/test_object_item" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/textNotFound"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/vollkorn_bold"
+        android:gravity="center"
+        android:paddingVertical="10dp"
+        android:text="Не найдено.."
+        android:visibility="gone"
+        android:textColor="@color/grey_font"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@+id/searchView" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
