--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,13 +15,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_margin="10dp">
+            android:orientation="vertical">
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/userImg"
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:src="@color/light_gray"
+                android:layout_margin="15dp"
                 android:layout_gravity="center"
                 android:scaleType="centerCrop"
                 app:shapeAppearanceOverlay="@style/CornersSize50"/>
@@ -29,9 +29,10 @@
                 android:id="@+id/lastNameTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="28sp"
+                android:textSize="30sp"
                 android:textColor="@color/dark_brown"
                 android:textStyle="bold"
+                android:layout_marginHorizontal="15dp"
                 android:textAlignment="center"
                 android:fontFamily="@font/vollkorn_bold"
                 android:text="Фамилия"/>
@@ -39,9 +40,10 @@
                 android:id="@+id/lmTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="26sp"
+                android:textSize="28sp"
                 android:textColor="@color/dark_brown"
                 android:textStyle="bold"
+                android:layout_marginHorizontal="15dp"
                 android:fontFamily="@font/vollkorn_bold"
                 android:text="ИО"
                 android:textAlignment="center"
@@ -50,11 +52,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginHorizontal="15dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="22sp"
+                    android:textSize="24sp"
                     android:textColor="@color/beige3"
                     android:text="Почта:"
                     android:fontFamily="@font/vollkorn_bold"
@@ -74,11 +77,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp"
+                android:layout_marginHorizontal="15dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="22sp"
+                    android:textSize="24sp"
                     android:textColor="@color/beige3"
                     android:text="Рейтинг:"
                     android:fontFamily="@font/vollkorn_bold"/>
@@ -99,16 +103,25 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingHorizontal="15dp"
+                android:background="@color/light_beige">
 
                 <TextView
                     android:id="@+id/testsVisibility"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="22sp"
+                    android:textSize="24sp"
+                    android:layout_weight="1"
                     android:text="Пройденные тесты"
                     android:textColor="@color/beige3"
                     android:fontFamily="@font/vollkorn_bold"/>
+
+                <ImageView
+                    android:id="@+id/rsvg"
+                    android:layout_width="25dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/down_svg"/>
 
             </LinearLayout>
 
@@ -117,6 +130,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:listitem="@layout/test_user_item"
+                android:layout_margin="15dp"
                 android:orientation="vertical"
                 android:visibility="gone"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
@@ -125,7 +139,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:gravity="bottom">
+                android:gravity="bottom"
+                android:layout_marginHorizontal="15dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -136,7 +151,7 @@
                         android:id="@+id/updateUser"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="22sp"
+                        android:textSize="24sp"
                         android:text="Изменить"
                         android:textAlignment="center"
                         android:textColor="@color/dark_brown"
@@ -152,7 +167,7 @@
                         android:id="@+id/logoutUser"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="22sp"
+                        android:textSize="24sp"
                         android:text="Выйти"
                         android:textAlignment="center"
                         android:textColor="@color/dark_brown"
@@ -163,7 +178,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:background="@drawable/button">
+                    android:background="@drawable/button_delete">
 
                     <TextView
                         android:id="@+id/deleteUser"
@@ -173,7 +188,7 @@
                         android:text="Удалить аккаунт"
                         android:textAlignment="center"
                         android:textColor="@color/dark_brown"
-                        android:textSize="22sp" />
+                        android:textSize="24sp" />
                 </LinearLayout>
 
             </LinearLayout>
