--- a/app/src/main/res/layout/test_user_item.xml
+++ b/app/src/main/res/layout/test_user_item.xml
@@ -3,24 +3,56 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:background="@drawable/object_item_stroke">
 
-    <TextView
-        android:id="@+id/nameTextView"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_weight="1"
-        android:textColor="@color/black"
-        android:text="Название"/>
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/markTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        android:text="4"/>
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/check_mark"
+            android:layout_marginRight="10dp"/>
+
+        <TextView
+            android:id="@+id/nameTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:fontFamily="@font/vollkorn_semibold"
+            android:textColor="@color/dark_brown"
+            android:text="Название"/>
+
+        <LinearLayout
+            android:id="@+id/markColor"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/red_mark">
+
+            <TextView
+                android:id="@+id/markTextView"
+                android:layout_width="match_parent"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:fontFamily="@font/vollkorn_semibold"
+                android:textColor="@color/dark_brown"
+                android:text="4"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="2dp"
+        android:layout_width="match_parent"
+        android:layout_height="1.4dp"
+        android:background="@drawable/test"/>
 
 </LinearLayout>
